# eigent

docs/plans/: 2026-01-19-voice-agent-design.md  2026-01-19-voice-agent-implementation.md
electron/main/: index.ts  voice.ts  voiceService.ts
src/components/ChatBox/: index.tsx
src/components/ChatBox/BottomBox/: InputBox.tsx
src/hooks/: useVoiceSession.ts
src/pages/: VoicePanel.tsx
src/routers/: index.tsx
voice/: main.py  pyproject.toml
voice/app/: __init__.py  config.py  deepgram_agent.py  eigent_client.py  models.py  prompts.py  routes.py  session.py
voice/tests/: conftest.py  test_session.py
